feat: Implement modular LVML architecture
- Create modular folder structure with clean separation of concerns:
  * core/ - Core LVML functionality and LVGL integration
  * xml/ - XML parsing and processing interface
  * network/ - WiFi and HTTP network management
  * micropython/ - MicroPython script execution
  * utils/ - Memory management utilities
  * driver/ - Hardware drivers (ESP32-S3-Box-3 LCD)

- Add comprehensive interfaces with minimal implementations:
  * All modules have proper init/deinit functions
  * Clean error handling with lvml_error_t enum
  * Modular design allows independent development

- Fix LVGL delay callback dependency issue:
  * Move custom_delay_ms() to core module
  * Properly set up delay callback after lv_init()
  * Resolve undefined reference errors

- Update build system:
  * Use glob patterns in both Makefile and CMake
  * Automatic file discovery for new modules
  * Clean include paths and dependencies

- Extend MicroPython API:
  * lvml.load_from_url() - Load UI from HTTP URL
  * lvml.load_from_xml() - Load UI from XML string
  * lvml.connect_wifi() - WiFi connection management
  * lvml.is_ready() - System status checking
  * lvml.get_version() - Version information

- Maintain backward compatibility:
  * All existing functions still work
  * Enhanced error handling and logging
  * Proper cleanup in deinit functions

This modular architecture provides a solid foundation for:
- XML-based UI loading from network sources
- MicroPython script execution within UI elements
- Clean separation between hardware drivers and UI logic
- Easy extension and maintenance

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third-party/lvgl"]
 	path = third-party/lvgl
 	url = https://github.com/lvgl/lvgl.git
+[submodule "third-party/TFT_eSPI"]
+	path = third-party/TFT_eSPI
+	url = https://github.com/Bodmer/TFT_eSPI.git
